# GuiRecursion

./: .gitignore  AUTHORS  NEWS  README  configure.ac
src/: Makefile.am  gui-recursion  main.c  pointer_struct.h  recursion.c  recursion.h
